Make percent progress in download window non-translatable (fix #827)

--- a/gui/src/batch/batchwindow.ui
+++ b/gui/src/batch/batchwindow.ui
@@ -46,7 +46,7 @@
       <number>0</number>
      </property>
      <property name="format">
-      <string>%p%</string>
+      <string notr="true">%p%</string>
      </property>
     </widget>
    </item>
