Add word-wrap to update window changelog

--- a/gui/src/updater/update-dialog.ui
+++ b/gui/src/updater/update-dialog.ui
@@ -61,6 +61,9 @@
      <property name="text">
       <string notr="true">{ changelog }</string>
      </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item>
