--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -87,6 +87,12 @@ section {
 	padding: 30px 0;
 }
 
+section h2 {
+	clear: both;
+	text-align: center;
+	margin: 30px 0 20px 0;
+}
+
 section article {
 	clear: both;
 	padding: 20px 0;
@@ -104,9 +110,24 @@ section article:nth-of-type(2n) img {
 	margin-right: 0;
 }
 
-section article h2 {
+section article h3 {
 	margin-top: 0;
 	font-size: 26px;
+	clear: none;
+}
+
+section .flags .flag {
+	float: left;
+	width: 20%;
+	text-align: center;
+	overflow: hidden;
+}
+section .flags .flag:last-child {
+	float: none;
+}
+
+section .flags .flag p {
+	line-height: 16px;
 }
 
 
