--- a/gui/src/mainwindow.ui
+++ b/gui/src/mainwindow.ui
@@ -408,6 +408,7 @@ QTextEdit {
     </property>
     <addaction name="actionAboutGrabber"/>
     <addaction name="actionAboutWebsite"/>
+    <addaction name="actionAboutGithub"/>
     <addaction name="actionAboutReportBug"/>
     <addaction name="separator"/>
     <addaction name="actionAboutQt"/>
@@ -1083,6 +1084,15 @@ QTextEdit {
     <string>Rename existing images</string>
    </property>
   </action>
+  <action name="actionAboutGithub">
+   <property name="icon">
+    <iconset resource="../../resources/resources.qrc">
+     <normaloff>:/images/icons/github.png</normaloff>:/images/icons/github.png</iconset>
+   </property>
+   <property name="text">
+    <string>Project GitHub</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
@@ -1111,9 +1121,6 @@ QTextEdit {
   <tabstop>buttonSaveSettings</tabstop>
  </tabstops>
  <resources>
-  <include location="../../resources/resources.qrc"/>
-  <include location="../../resources/resources.qrc"/>
-  <include location="../../resources/resources.qrc"/>
   <include location="../../resources/resources.qrc"/>
  </resources>
  <connections>
@@ -1428,7 +1435,7 @@ QTextEdit {
    <slot>getAll()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>645</x>
+     <x>644</x>
      <y>498</y>
     </hint>
     <hint type="destinationlabel">
@@ -1444,7 +1451,7 @@ QTextEdit {
    <slot>batchClearSel()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>506</x>
+     <x>503</x>
      <y>498</y>
     </hint>
     <hint type="destinationlabel">
@@ -1460,7 +1467,7 @@ QTextEdit {
    <slot>batchClear()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>366</x>
+     <x>362</x>
      <y>498</y>
     </hint>
     <hint type="destinationlabel">
@@ -1645,6 +1652,22 @@ QTextEdit {
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionAboutGithub</sender>
+   <signal>triggered()</signal>
+   <receiver>mainWindow</receiver>
+   <slot>aboutGithub()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>270</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>help()</slot>
@@ -1689,5 +1712,6 @@ QTextEdit {
   <slot>aboutWebsite()</slot>
   <slot>aboutReportBug()</slot>
   <slot>renameExisting()</slot>
+  <slot>aboutGithub()</slot>
  </slots>
 </ui>
